<resources>
    <string name="app_name">Mental Health | Diary emotions</string>
    <string name="txtOnbordH6">How to use this application</string>
    <string name="txtOnbordB1">Set your current mood and press save button.\n\nAlso you can change the date and set exact tags about your activity, food and health. You can check all this data and correlation with your mood condition at statistics tab.\n\nWe are happy to help you track your mood and stay healthy</string>
    <string name="record">Record</string>
    <string name="save">Save</string>
    <string name="healthy">Healthy</string>
    <string name="breathingExercises">Breathing exercises</string>
    <string name="cardioWorkout">Cardio workout</string>
    <string name="dairy">Dairy</string>
    <string name="diet">Diet</string>
    <string name="gardening">Gardening</string>
    <string name="goodSleep">Good sleep</string>
    <string name="highFiberFood">High fiber food</string>
    <string name="housework">Housework</string>
    <string name="lowSaltDiet">Low salt diet</string>
    <string name="seafood">Seafood</string>
    <string name="sex">Sex</string>
    <string name="sport">Sport</string>
    <string name="stretching">Stretching</string>
    <string name="vegetables">Vegetables</string>
    <string name="walking">Walking</string>
    <string name="yoga">Yoga</string>
    <string name="otherPhysicalActivity">Other physical activity</string>
    <string name="txtUnhealthy">Unhealthy</string>
    <string name="alcohol">Alcohol</string>
    <string name="coffee">Coffee</string>
    <string name="energeticDrinks">Energetic drinks</string>
    <string name="fastfood">Fastfood</string>
    <string name="fatFood">Fat food</string>
    <string name="irregularEating">Irregular eating</string>
    <string name="irregularSports">Irregular sports</string>
    <string name="lateDinner">Late dinner</string>
    <string name="longSitting">Long sitting</string>
    <string name="noActivity">No activity</string>
    <string name="overeating">Overeating</string>
    <string name="overpressure">Overpressure</string>
    <string name="pastry">Pastry</string>
    <string name="processedFood">Processed food</string>
    <string name="salt">Salt</string>
    <string name="smoking">Smoking</string>
    <string name="soda">Soda</string>
    <string name="stress">Stress</string>
    <string name="sugar">Sugar</string>
    <string name="sweets">Sweets</string>
    <string name="otherUnhealthyHabit">Other unhealthy habit</string>
    <string name="txtSymptoms">Symptoms</string>
    <string name="confused">Confused</string>
    <string name="coordinationProblems">Coordination problems</string>
    <string name="crankyOrImpatient">Cranky or impatient</string>
    <string name="decreasedVision">Decreased vision</string>
    <string name="dizzy">Dizzy</string>
    <string name="dryMouth">Dry mouth</string>
    <string name="drySkin">Dry skin</string>
    <string name="dyspnea">Dyspnea</string>
    <string name="energetic">Energetic</string>
    <string name="fastHeartbeat">Fast heartbeat</string>
    <string name="fatigue">Fatigue</string>
    <string name="feelWell">Feel well</string>
    <string name="goodMood">Good mood</string>
    <string name="happy">Happy</string>
    <string name="headache">Headache</string>
    <string name="healSlowly">Heal slowly</string>
    <string name="hunger">Hunger</string>
    <string name="itchySkin">Itchy skin</string>
    <string name="loseWeightWithoutTrying">Lose weight without trying</string>
    <string name="nausea">Nausea</string>
    <string name="nervous">Nervous</string>
    <string name="nightmares">Nightmares</string>
    <string name="numbOrTinglingHandsOrFeet">Numb or tingling hands or feet</string>
    <string name="painInChest">Pain in chest</string>
    <string name="paleSkin">Pale skin</string>
    <string name="shaky">Shaky</string>
    <string name="sleepy">Sleepy</string>
    <string name="sweaty">Sweaty</string>
    <string name="thirsty">Thirsty</string>
    <string name="urinateALot">Urinate a lot</string>
    <string name="weak">Weak</string>
    <string name="otherSymptoms">Other symptoms</string>
    <string name="txtCare">Care</string>
    <string name="aceInhibitors">ACE inhibitors</string>
    <string name="alphaBlockers">Alpha blockers</string>
    <string name="alpha2ReceptorAgonists">Alpha-2 Receptor Agonists</string>
    <string name="angiotensin2ReceptorBlockers">Angiotensin II receptor blockers</string>
    <string name="betaBlockers">Beta-blockers</string>
    <string name="calciumChannelBlockers">Calcium channel blockers</string>
    <string name="centralAgonists">Central agonists</string>
    <string name="combinedAlphaAndBetablockers">Combined alpha and beta-blockers</string>
    <string name="diuretics">Diuretics</string>
    <string name="peripheralAdrenergicInhibitors">Peripheral adrenergic inhibitors</string>
    <string name="vasodilators">Vasodilators</string>
    <string name="otherDrugs">Other drugs</string>
    <string name="statistics">Statistics</string>
    <string name="scanThePulse">Scan the pulse</string>
    <string name="btnSave">Data saved</string>
    <string name="pulse">Pulse</string>
    <string name="date">Date</string>
    <string name="txtOtherTags">Other tags</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="btnOtherTags">Add</string>
    <string name="editTxtOtherTags">Enter an additional tag</string>
    <string name="toastSave">Saved</string>
    <string name="toastDelete">The entry was deleted</string>
    <string name="stsOnbord">There are no records yet</string>
    <string name="verySad">Very sad</string>
    <string name="sad">Sad</string>
    <string name="lowSpirit">Low spirit</string>
    <string name="neutral">Neutral</string>
    <string name="glad">Glad</string>
    <string name="happy2">Happy</string>
    <string name="veryHappy">Very happy</string>
    <string name="feelingAwful">Feeling awful</string>
    <string name="feelingBad">Feeling bad</string>
    <string name="feelingNotWell">Feeling not well</string>
    <string name="feelingNeutral">Feeling neutral</string>
    <string name="feelingWell">Feeling well</string>
    <string name="feelingGood">Feeling good</string>
    <string name="feelingAwesome">Feeling awesome</string>
    <string name="strongAnxiety">Strong anxiety</string>
    <string name="anxiety">Anxiety</string>
    <string name="worry">Worry</string>
    <string name="neutral2">Neutral</string>
    <string name="unconcerned">Unconcerned</string>
    <string name="calm">Calm</string>
    <string name="harmony">Harmony</string>
    <string name="mood">Mood</string>
    <string name="health">Health</string>
    <string name="stress2">Stress</string>
</resources>